Optimized build flags, bench script and added results

--- a/puzzle2/Cargo.toml
+++ b/puzzle2/Cargo.toml
@@ -3,4 +3,10 @@ name = "puzzle2"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+opt-level = 3
+debug = false
+strip = "symbols"
+lto = true
+
 [dependencies]
