--- a/puzzle6/Cargo.toml
+++ b/puzzle6/Cargo.toml
@@ -3,5 +3,11 @@ name = "puzzle6"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+opt-level = 3
+debug = false
+strip = "symbols"
+lto = true
+
 [dependencies]
 regex = "1.11.1"
